--- a/src/webapp/WEB-INF/pages/users/show.html
+++ b/src/webapp/WEB-INF/pages/users/show.html
@@ -29,7 +29,7 @@
             <a th:href="@{/users/edit?id={id}(id=${user.getId()})}">Edit</a>
         </td>
         <td>
-            <form th:method="DELETE" th:action="@{/users/delete?id={id}(id=${user.getId()})}">
+            <form th:method="POST" th:action="@{/users/delete?id={id}(id=${user.getId()})}">
                 <input type="submit" value="Delete"/>
         </td>
     </tr>
