--- a/src/webapp/WEB-INF/pages/users/allUsers.html
+++ b/src/webapp/WEB-INF/pages/users/allUsers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>All Users</title>
@@ -13,7 +13,7 @@
     <tr>
         <th>Id</th>
         <th>Name</th>
-        <th>SurName</th>
+        <th>Surname</th>
         <th>Age</th>
         <th>View user</th>
         <th>Edit user</th>
@@ -27,10 +27,17 @@
         <td th:utext="${user.getAge()}">age</td>
 
         <td>
-            <a th:href="@{/users/show?id={id}(id=${user.getId()})}">View</a>
+            <form th:method="GET" th:action="@{/users/show?id={id}}">
+                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                <input type="submit" value="View"/>
+            </form>
+
         </td>
         <td>
-            <a th:href="@{/users/edit?id={id}(id=${user.getId()})}">Edit</a>
+            <form th:method="GET" th:action="@{/users/edit}">
+                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                <input type="submit" value="Edit"/>
+            </form>
         </td>
         <td>
             <form th:method="POST" th:action="@{/users/delete?id={id}(id=${user.getId()})}">
@@ -38,9 +45,10 @@
             </form>
         </td>
     </tr>
-
-
 </table>
-<a href="/users/new">Add User</a>
+<p></p>
+<form th:method="GET" th:action="@{/users/new}">
+    <input type="submit" value="Add User"/>
+</form>
 </body>
 </html>
