--- a/src/webapp/WEB-INF/pages/users/edit.html
+++ b/src/webapp/WEB-INF/pages/users/edit.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+  <meta charset="UTF-8">
   <title>Edit User</title>
 </head>
 <body>
 <h2>Edit User</h2>
 <br>
-<form th:method="POST" th:action="@{/users/edit?id={id}(id=${user.getId()})}" th:object="${user}">
+<form th:method="POST" th:action="@{/users/edit}" th:object="${user}">
+  <input type="hidden" th:field="*{id}" th:value="${user.getId()}"/>
 
   <label for="name">Name</label>
   <input type="text" th:field="*{name}" id="name">
+  <br>
   <label for="surname">Surname</label>
   <input type="text" th:field="*{surname}" id="surname">
+  <br>
   <label for="age">Age</label>
   <input type="number" th:field="*{age}" id="age">
+  <br>
   <br>
   <input type="submit" value="Edit"/>
   <br>
   <a href="/users/">BACK</a>
+</form>
 </body>
 </html>
