--- a/src/webapp/WEB-INF/pages/users/new.html
+++ b/src/webapp/WEB-INF/pages/users/new.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
+    <meta charset="UTF-8">
     <title>New User</title>
 </head>
 <body>
 <h2>New User</h2>
 <br>
-<form th:method="POST" th:action="@{/users}" th:object="${user}">
+<form th:method="POST" th:action="@{/users/new}">
 
     <label for="name">Name</label>
     <input type="text" name="name" id="name">
+    <br>
     <label for="surname">Surname</label>
     <input type="text" name="surname" id="surname">
+    <br>
     <label for="age">Age</label>
     <input type="number" name="age" id="age">
+    <br>
     <br>
     <input type="submit" value="Create"/>
     <br>
     <a href="/users/">BACK</a>
+</form>
 </body>
 </html>
