--- a/src/webapp/WEB-INF/pages/users/show.html
+++ b/src/webapp/WEB-INF/pages/users/show.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://thymeleaf.org">
-    <title>All Users</title>
+    <meta charset="UTF-8">
+    <title>User</title>
+    <style>table th, table td {
+        padding: 5px;
+    }</style>
 </head>
 <h2>User Info</h2>
 <body>
 <table border="1">
     <tr>
         <th>Id</th>
-        <th>FirstName</th>
-        <th>LastName</th>
+        <th>Name</th>
+        <th>Surname</th>
         <th>Age</th>
         <th>Back</th>
         <th>Edit user</th>
@@ -19,24 +22,25 @@
     </tr>
     <tr>
         <td th:utext="${user.getId()}">id</td>
-        <td th:utext="${user.getName()}">firstname</td>
-        <td th:utext="${user.getSurname()}">age</td>
-        <td th:utext="${user.getAge()}">email</td>
+        <td th:utext="${user.getName()}">name</td>
+        <td th:utext="${user.getSurname()}">surname</td>
+        <td th:utext="${user.getAge()}">age</td>
         <td>
             <a href="/users/">Back</a>
+
         </td>
         <td>
-            <a th:href="@{/users/edit?id={id}(id=${user.getId()})}">Edit</a>
+            <form th:method="GET" th:action="@{/users/edit?id={id}}">
+                <input type="hidden" name="id" th:value="${user.getId()}"/>
+                <input type="submit" value="Edit"/>
+            </form>
         </td>
         <td>
             <form th:method="POST" th:action="@{/users/delete?id={id}(id=${user.getId()})}">
                 <input type="submit" value="Delete"/>
+            </form>
         </td>
     </tr>
-
-
 </table>
-
-
 </body>
 </html>
