--- a/src/webapp/WEB-INF/pages/users/edit.html
+++ b/src/webapp/WEB-INF/pages/users/edit.html
@@ -11,13 +11,16 @@
   <input type="hidden" th:field="*{id}" th:value="${user.getId()}"/>
 
   <label for="name">Name</label>
-  <input type="text" th:field="*{name}" id="name">
+  <input type="text" th:field="*{name}" id="name"/>
+  <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
   <br>
   <label for="surname">Surname</label>
-  <input type="text" th:field="*{surname}" id="surname">
+  <input type="text" th:field="*{surname}" id="surname"/>
+  <div style="color: red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Surname error</div>
   <br>
   <label for="age">Age</label>
-  <input type="number" th:field="*{age}" id="age">
+  <input type="number" th:field="*{age}" id="age"/>
+  <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
   <br>
   <br>
   <input type="submit" value="Edit"/>
