--- a/src/webapp/WEB-INF/pages/users/new.html
+++ b/src/webapp/WEB-INF/pages/users/new.html
@@ -7,16 +7,19 @@
 <body>
 <h2>New User</h2>
 <br>
-<form th:method="POST" th:action="@{/users/new}">
+<form th:method="POST" th:action="@{/users/new}" th:object="${user}">
 
     <label for="name">Name</label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name"/>
+    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
     <br>
     <label for="surname">Surname</label>
-    <input type="text" name="surname" id="surname">
+    <input type="text" name="surname" id="surname"/>
+    <div style="color: red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Surname error</div>
     <br>
     <label for="age">Age</label>
-    <input type="number" name="age" id="age">
+    <input type="number" name="age" id="age"/>
+    <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
     <br>
     <br>
     <input type="submit" value="Create"/>
